--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </body>
    
 </h1>H N NISARGA</h1>
-<h2><img src="./WhatsApp  2023-05-20 at 12.26.05.jpg " height="200"alt="my photo"/></h2>
+<h2><img src="./WhatsApp  2023-05-20 at 12.26.05.jpg " height="200"/></h2>
 
 <hr/>
 <h2>summary</h2>
